update: project structure

--- a/index.html
+++ b/index.html
@@ -1,10 +1,24 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="7essabat_app_logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>7essabat-app-v3</title>
+    <title>7essabat-App</title>
+
+    <meta
+      name="description"
+      content="7essAbAt App is a simple and fast web app for الحسابات، tracking profits, expenses, and daily calculations. Works offline as a PWA."
+    />
+
+    <meta
+      name="keywords"
+      content="7essabat, حسابات, profit calculator, expense tracker, PWA app, react app, offline app"
+    />
+
+    <meta name="author" content="Ali AbuEl3iz" />
+    <meta name="robots" content="index, follow" />
+    
   </head>
   <body>
     <div id="root"></div>
